# spotify-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  cliff.toml  deny.toml
.github/: dependabot.yml
.github/actions/changelog/: action.yml
.github/actions/format-lint/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/test/: action.yml
.github/workflows/: _reusable-lint.yml  _reusable-publish-check.yml  _reusable-security.yml  _reusable-test.yml  bench.yml  ci-deps.yml  ci-dev.yml  ci-main.yml  ci-test.yml  ci.yml  coverage.yml  crates-io-check.yml  fuzz.yml  release.yml
completions/: _spotify-cli  spotify.bash  spotify.fish
docs/: RPC.md
src/: constants.rs  error.rs  lib.rs  logging.rs  main.rs
src/action/: mod.rs  playlist.rs
src/cache/: devices.rs  metadata.rs  mod.rs  pins.rs  playlists.rs  search.rs
src/cli/: auth.rs  cache.rs  complete.rs  completions.rs  device.rs  help.rs  info.rs  mod.rs  now_playing.rs  pin.rs  play.rs  player.rs  playlist.rs  queue.rs  recently_played.rs  search.rs  sync.rs  system.rs
src/cli/args/: auth.rs  browse.rs  daemon.rs  library.rs  media.rs  mod.rs  player.rs  playlist.rs  user.rs
src/cli/commands/: albums.rs  audiobooks.rs  auth.rs  categories.rs  chapters.rs  daemon.rs  episodes.rs  follow.rs  library.rs  macros.rs  markets.rs  mod.rs  now_playing.rs  pin.rs  playlist.rs  resource.rs  shows.rs  user.rs
src/domain/: album.rs  artist.rs  auth.rs  cache.rs  device.rs  mod.rs  pin.rs  player.rs  playlist.rs  search.rs  settings.rs  track.rs
src/endpoints/: mod.rs  notes.txt  search.rs
src/endpoints/albums/: check_users_saved_albums.rs  get_album.rs  get_album_tracks.rs  get_new_releases.rs  get_several_albums.rs  get_users_saved_albums.rs  mod.rs  remove_users_saved_albums.rs  save_albums_for_current_user.rs
src/endpoints/artists/: get_artist.rs  get_artist_top_tracks.rs  get_artists_albums.rs  get_artists_related_artists.rs  get_several_artists.rs  mod.rs
src/endpoints/audiobooks/: check_users_saved_audiobooks.rs  get_audiobook.rs  get_audiobook_chapters.rs  get_several_audiobooks.rs  get_users_saved_audiobooks.rs  mod.rs  remove_users_saved_audiobooks.rs  save_audiobooks_for_current_user.rs
src/endpoints/categories/: get_category_playlists.rs  get_several_browse_categories.rs  get_single_browse_category.rs  mod.rs
src/endpoints/chapters/: get_chapter.rs  get_several_chapters.rs  mod.rs
src/endpoints/episodes/: check_users_saved_episodes.rs  get_episode.rs  (+5 more)
src/http/: api.rs  auth.rs  client.rs  endpoints.rs  mod.rs
src/io/: common.rs  format_registry.rs  mod.rs  output.rs
src/oauth/: callback_server.rs  flow.rs  mod.rs  pkce.rs  token.rs
src/output/: cache.rs  human.rs  json.rs  mod.rs  pin.rs  settings.rs
src/rpc/: dispatch.rs  events.rs  mod.rs  protocol.rs  server.rs
src/spotify/: albums.rs  artists.rs  auth.rs  base.rs  client.rs  devices.rs  error.rs  mod.rs  playback.rs  playlists.rs  search.rs  track.rs
src/storage/: config.rs  fuzzy.rs  keyring.rs  mod.rs  paths.rs  token_store.rs  unified_token.rs
src/types/: album.rs  artist.rs  common.rs  mod.rs  playback.rs  playlist.rs  track.rs  user.rs
tests/: auth.rs  cache.rs  cli_smoke.rs  cli_tests.rs  command_tests.rs  endpoint_tests.rs  integration_test.rs  rpc_tests.rs  spotify_http.rs
(+89 files in other folders)
