[package]
name = "spotify-cli"
version = "0.5.0"
edition = "2024"
authors = ["Dheebz"]
description = "A command-line interface for Spotify"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Dheebz/spotify-cli"
homepage = "https://github.com/Dheebz/spotify-cli"
readme = "README.md"
keywords = ["spotify", "cli", "music", "player"]
categories = ["command-line-utilities", "multimedia::audio"]
rust-version = "1.85"

[[bin]]
name = "spotify-cli"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "signal"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# PKCE generation
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# Callback server for OAuth
tiny_http = "0.12"

# Cross-platform directories
dirs = "5"

# Unix process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Secure credential storage (system keychain)
keyring = "3"

# Error handling
thiserror = "2"

# URL handling
url = "2"
urlencoding = "2"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
